# ComfyUI-Maya1_TTS

./: LICENSE  README.md  __init__.py  example_workflow  pyproject.toml
core/: __init__.py  model_wrapper.py  snac_decoder.py  utils.py
example_workflow/: Maya1_TTS-example_workflow  Maya1_TTS-example_workflow.json  Maya1_TTS-example_workflow_Barebones.json
js/: config.js  maya1_tts.js
nodes/: maya1_tts_barebones.py  maya1_tts_combined.py
